@@ -1,9 +1,9 @@
 package cz.artique.server.crawler;
 
 import java.io.IOException;
-import java.io.InputStream;
+import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
+import java.net.URL;
 
 import org.apache.http.HttpEntity;
 import org.apache.http.HttpResponse;
@@ -13,9 +13,8 @@ import org.apache.http.conn.ClientConnectionManager;
 import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.http.params.BasicHttpParams;
 import org.apache.http.params.HttpParams;
-import org.apache.http.protocol.HTTP;
-import org.apache.http.util.EntityUtils;
-import org.jsoup.Jsoup;
+import org.jsoup.Connection;
+import org.jsoup.helper.HttpConnection;
 import org.jsoup.nodes.Document;
 
 import com.google.appengine.api.datastore.Link;
@@ -37,14 +36,14 @@ public abstract class Fetcher {
 	 * @return URI
 	 * @throws CrawlerException
 	 */
-	protected URI getURI(Link link) throws CrawlerException {
+	protected URL getURL(Link link) throws CrawlerException {
 		if (link == null) {
 			throw new NullPointerException();
 		}
 		try {
-			return new URI(link.getValue());
-		} catch (URISyntaxException e) {
-			throw new CrawlerException("Wrong URI syntax", e);
+			return new URL(link.getValue());
+		} catch (MalformedURLException e) {
+			throw new CrawlerException("Wrong URL syntax", e);
 		}
 	}
 
@@ -87,26 +86,14 @@ public abstract class Fetcher {
 	 * 
 	 * @param uri
 	 *            URI of web page to be downloaded
-	 * @return DOM representation of web page with URI
+	 * @return DOM representation of web page with URL
 	 * @throws CrawlerException
 	 */
-	protected Document getDocument(URI uri) throws CrawlerException {
-		HttpEntity entity = getEntity(uri);
-		InputStream is;
-		try {
-			is = entity.getContent();
-		} catch (IOException e) {
-			throw new CrawlerException("Cannot get response content");
-		}
-
-		String charset = EntityUtils.getContentCharSet(entity);
-		if (charset == null) {
-			charset = HTTP.DEFAULT_CONTENT_CHARSET;
-		}
-
+	protected Document getDocument(URL url) throws CrawlerException {
 		Document document;
 		try {
-			document = Jsoup.parse(is, charset, uri.toString());
+			Connection connection = HttpConnection.connect(url);
+			document = connection.get();
 		} catch (IOException e) {
 			throw new CrawlerException("Cannot parse html page");
 		}
